--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -10,9 +10,9 @@
             "request": "launch",
             "preLaunchTask": "build",
             // If you have changed target frameworks, make sure to update the program path.
-            "program": "${workspaceFolder}/minimalTR-full/bin/Debug/net6.0/minimalTR-full.dll",
+            "program": "${workspaceFolder}/minimalTR-api/bin/Debug/net6.0/minimalTR-api.dll",
             "args": [],
-            "cwd": "${workspaceFolder}/minimalTR-full",
+            "cwd": "${workspaceFolder}/minimalTR-api",
             "stopAtEntry": false,
             // Enable launching a web browser when ASP.NET Core starts. For more information: https://aka.ms/VSCode-CS-LaunchJson-WebBrowser
             "serverReadyAction": {
