--- a/minimaltr.integrationTests/minimalTR-api.Tests.csproj
+++ b/minimaltr.integrationTests/minimalTR-api.Tests.csproj
@@ -2,11 +2,11 @@
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
-    <RootNamespace>minimalTR-full.Tests</RootNamespace>
+    <RootNamespace>minimalTR-api.Tests</RootNamespace>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <IsPackable>false</IsPackable>
-    <AssemblyName>minimalTR-full.Tests</AssemblyName>
+    <AssemblyName>minimalTR-api.Tests</AssemblyName>
   </PropertyGroup>
 
   <ItemGroup>
@@ -25,7 +25,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\minimalTR-full\minimalTR-full.csproj" />
+    <ProjectReference Include="..\minimalTR-api\minimalTR-api.csproj" />
   </ItemGroup>
 
 </Project>
