--- a/minimalTR-handlers/minimalTR-handlers.csproj
+++ b/minimalTR-handlers/minimalTR-handlers.csproj
@@ -14,5 +14,6 @@
   
   <ItemGroup>
     <ProjectReference Include="..\minimalTR-core\minimalTR-core.csproj" />
+    <ProjectReference Include="..\minimalTR-dal\minimalTR-dal.csproj" />
   </ItemGroup>
 </Project>
