--- a/minimalTR-handlers/minimalTR-handlers.csproj
+++ b/minimalTR-handlers/minimalTR-handlers.csproj
@@ -8,6 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="FluentValidation" Version="11.2.0" />
     <PackageReference Include="MediatR" Version="10.0.1" />
     <PackageReference Include="MediatR.Contracts" Version="1.0.1" />
   </ItemGroup>
